--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-geosuggest": "^2.12.1",
+    "react-iframe-comm": "^1.2.2",
     "react-media": "^1.10.0",
     "react-rating": "^2.0.3",
     "react-router-bootstrap": "^0.25.0",
